--- a/aboly.html
+++ b/aboly.html
@@ -1198,8 +1198,11 @@ img.characterimg {
 <p><a id="shidafu"></a>后世表示身份的称谓中，<span class="lykeyword">卿大夫</span>、<span class="lykeyword">公卿大夫</span>属于高级官员；<span class="lykeyword">士大夫</span>泛指官吏阶层，特别是有公职名望的知识分子；<span class="lykeyword">士人</span>是尚无官位但有一定才誉的读书人（即<a href="#shi4c">士</a>），可看作士大夫的预备队。</p>
 </div>
 </li>
-<li><p><span class="lyterm">忍</span>：可以理解为容受，容忍，主语就是孔子或者天理；或理解为<a href="#ren3">忍心</a>，心硬干得上来，主语是季氏，皆通。成语“是可忍也，孰不可忍”中仅指容忍。</p></li>
-<li><p><a id="shu2"></a><span class="lyterm">孰</span>：疑问代词，什么。它的另一个常见义是“谁”。<span class="lyexample"><span>【例】</span><span><a href="#3.22" class="lyref">3.22</a> <span class="lyq">管氏而知礼，孰不知礼？</span></span></span></p></li>
+<li>
+<p><span class="lyterm">忍</span>：可以理解为容受，容忍，主语就是孔子或者天理；或理解为<a href="#ren3">忍心</a>，心硬干得上来，主语是季氏，皆通。成语“是可忍也，孰不可忍”中仅指容忍。</p>
+<p><a id="shu2"></a><span class="lyterm">孰</span>：疑问代词，什么。它的另一个常见义是“谁”。</p>
+<p><span class="lyterm">是可忍也，孰不可忍也？</span>使用假设+反问的句式，表示语气强烈的否定。<span class="lyexample"><span>【例】</span><span><a href="#3.22" class="lyref">3.22</a> <span class="lyq">管氏而知礼，孰不知礼？</span></span></span></p>
+</li>
 </ul></div>
 </div>
 <a id="3.2"></a><div class="lyblob">
@@ -2277,6 +2280,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><a id="zhi4f"></a><span class="lyterm">质</span>：质地，指人内在的、不经修饰的天性、本质。</p>
+<p><a id="sheng4b"></a><span class="lyterm">胜</span>：超过。<span class="lyexample"><span>【例】</span><span><a href="#13.11" class="lyref">13.11</a> <span class="lyq">胜残去杀。</span></span></span></p>
 <p><span class="lyterm">文</span>：文采，指人经过后天教养学习后，流露于外的仪态风度。</p>
 </li>
 <li>
@@ -3472,7 +3476,7 @@ img.characterimg {
 <p><span class="lyterm">不时</span>：时间不适宜，指蔬食瓜果未熟、过老、不当令等。</p>
 <p><span class="lyterm">割不正</span>：指牲肉的分割不合规范。如《仪礼》特牲馈食礼、少牢馈食礼，记载了祭祀所用的牲体应该分解为多少部分，各部分怎样截割、烹煮和使用。</p>
 </li>
-<li><p><span class="lyterm">肉虽多，不使胜食气</span>：就算供应很多肉，也不要吃过量，使肥甘厚味压倒谷菜之气。<span class="lyseealso"><span>【参】</span><span>清代徐文弼《寿世传真·修养宜饮食调理》：<span class="lyq">谷粟<a href="#shu1">菽</a>麦，自然冲和之味，有益人补阴之功。……若人之所为者，皆烹饪偏厚之味，有致疾伤命之虞。……茹淡者安，啖厚者危。……厚不如薄，多不如少，虑患而谨节之，畏危而坚忍之，举匕箸如<a href="#jing3">儆</a>戈矛，不与肉食者同其陷溺，宁负我生之腹，不负生我之天，是亦卫生之一道也。</span>（虞：忧。茹：吃。匕：相当于汤匙。箸（<span class="lypinyin">zhù</span>）：筷子。卫生：养生。）</span></span></p></li>
+<li><p><span class="lyterm">肉虽多，不使<a href="#sheng4b">胜</a>食气</span>：就算供应很多肉，也不要吃过量，使肥甘厚味压倒谷菜之气。<span class="lyseealso"><span>【参】</span><span>清代徐文弼《寿世传真·修养宜饮食调理》：<span class="lyq">谷粟<a href="#shu1">菽</a>麦，自然冲和之味，有益人补阴之功。……若人之所为者，皆烹饪偏厚之味，有致疾伤命之虞。……茹淡者安，啖厚者危。……厚不如薄，多不如少，虑患而谨节之，畏危而坚忍之，举匕箸如<a href="#jing3">儆</a>戈矛，不与肉食者同其陷溺，宁负我生之腹，不负生我之天，是亦卫生之一道也。</span>（虞：忧。茹：吃。匕：相当于汤匙。箸（<span class="lypinyin">zhù</span>）：筷子。卫生：养生。）</span></span></p></li>
 <li><p><span class="lyterm">不及乱</span>：指不要喝到颠三倒四的即可。</p></li>
 <li><p><span class="lyterm">沽酒市脯</span>（<span class="lypinyin">fǔ</span>）：（不是自家酿的，而是从外面）买来的酒，从外面买来的（质量可疑的）肉。它们都不应用于祭祀。<span class="lyterm">脯</span>：干肉。</p></li>
 <li><p><span class="lyterm">不撤姜食，不多食</span>：（吃完饭后，）只留着姜碟不撤去（以供随时食用），但也不多吃。姜也有刺激性，但清气提神，故不算入<a href="#hun1">荤</a>。<span class="lyseealso"><span>【参】</span><span>清代汪昂《本草备要·生姜》：<span class="lyq">辛温。行阳分而祛寒发表，宣肺气而解郁调中，畅胃口而开痰下食。……久食兼酒，则患目发痔（积热使然）。</span></span></span></p></li>
@@ -4362,8 +4366,8 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#13.11">13.11</a></div>
 <div class="lybloboriginaltext"><p>子曰：“‘善人为邦百年，亦可以胜残去杀矣。’诚哉是言也！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
-<p><span class="lyterm">胜残去杀</span>：消解残暴，免除杀戮。这句引语的出处不详。</p>
-<p>胜残去杀与下一章的普施仁政，就像<a href="#lijiliyun">小康</a>与大同的差距，所以用<a href="#yi4d">亦</a>。另可参考 <a href="#11.20" class="lyref">11.20</a>  对善人的解释。</p>
+<p><span class="lyterm"><a href="#sheng4b">胜</a>残去杀</span>：消解残暴，免除杀戮。这句引语的出处不详。“胜残去杀”与下一章的普施仁政，就像<a href="#lijiliyun">小康</a>与大同的差别，所以用<a href="#yi4d">亦</a>。</p>
+<p>“百年”与下一章的“世”，都说明政策应具有持续性、前瞻性，才能移风易俗，化物善道。所以有成语：十年树木，百年树人。<span class="lyseealso"><span>【参】</span><span><a href="#19.18" class="lyref">19.18</a> <span class="lyq">其不改父之臣与父之政，是难能也。</span></span></span></p>
 </li></ul></div>
 </div>
 <a id="13.12"></a><div class="lyblob">
@@ -4371,7 +4375,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“如有王者，必世而后仁。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">王者</span>：指孔子理想中以<a href="#wangdao">王道</a>治天下的贤君圣人。</p></li>
-<li><p><span class="lyterm">必世而后仁</span>：指一定要经历长期教化，才能真正实现仁政。一<span class="lyterm">世</span>为30年，孔子认为这是施行仁政前的过渡阶段。</p></li>
+<li><p><span class="lyterm">必世而后仁</span>：指一定要经历长期教化，才能真正实现仁政。一<span class="lyterm">世</span>为30年，相当于一代人的时间，孔子认为这是施行仁政前的过渡阶段。</p></li>
 </ul></div>
 </div>
 <a id="13.13"></a><div class="lyblob">
@@ -5040,7 +5044,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#15.2">15.2</a></div>
 <div class="lybloboriginaltext"><p>在陈绝粮，从者病莫能兴。<a href="#zilu">子路</a>愠，见曰：“君子亦有穷乎？”子曰：“君子固穷，小人穷斯滥矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">病莫能兴</span>。<a id="bing4"></a><span class="lyterm">病</span>：困苦，困乏，这里指因为断粮而饿坏了。<span class="lyterm">兴</span>：起身。有的书在“病”之后加逗号，考虑到结构相同的“爱莫能助”、“苦不堪言”都是耳熟能详，就不多此一举了。</p></li>
+<li><p><span class="lyterm">病莫能兴</span>。<a id="bing4"></a><span class="lyterm">病</span>：困苦，困乏，这里指因为断粮而饿坏了。<span class="lyterm">兴</span>：起身。也有在“病”之后加逗号，但考虑到结构相同的“爱莫能助”、“苦不堪言”、“乐不可支”读起来都很顺，就不多此一举了。</p></li>
 <li><p><span class="lyterm">固穷</span>：在艰苦困境中保持意志坚定（不违仁）。<span class="lyterm"><a href="#gu4a">固</a></span>：动词，安固于，即安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语“穷途末路”。<a id="qiongda"></a>《孟子·尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <a href="#4.9" class="lyref">4.9</a> <a href="#6.7" class="lyref">6.7</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（<a id="e4b"></a>厄：困苦。<a id="min3b"></a>悯：忧伤。）</span></span>思考：“君子固穷”与“树挪死，人挪活”相矛盾吗？“固”与“挪”应以什么为准绳？</p></li>
 <li><p><span class="lyterm">滥</span>：过度，无节制，引申指抛弃操守地胡作非为，乱来。<span class="lyexample"><span>【例】</span><span>成语“宁缺勿滥”，熟语“滥用职权”。</span></span></p></li>
 </ul></div>
@@ -5517,7 +5521,14 @@ img.characterimg {
 <a id="16.14"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#16.14">16.14</a></div>
 <div class="lybloboriginaltext"><p>邦君之妻，君称之曰夫人，夫人自称曰小童；邦人称之曰君夫人，称诸异邦曰寡小君；异邦人称之亦曰君夫人。</p></div>
-<div class="lyblobannotation"><p>这一章的内容比较突兀，疑从他书混入。《礼记·曲礼下》同样定义了除“君夫人”外的3个称谓。</p></div>
+<div class="lyblobannotation">
+<p>这一章的内容比较突兀，疑从他书混入。《礼记·曲礼下》同样定义了除“<a href="#jun1">君</a>夫人”以外的3个称谓。</p>
+<ul class="lyblobitemize">
+<li><p><span class="lyterm">夫人</span>：《曲礼下》孔颖达疏：<span class="lyq">夫，扶也，言扶持于王也。</span></p></li>
+<li><p><span class="lyterm">小童</span>：国君夫人的自我谦称。《曲礼下》郑玄注：<span class="lyq">若云未成人也。</span></p></li>
+<li><p><a id="gua3"></a><span class="lyterm">寡</span>：王侯的自我谦称，一说意为孤独，一说意为少<a href="#de2a">德</a>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云寡者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
+</ul>
+</div>
 </div>
 <a id="17"></a><h1 class="lybodychapter">17. 阳货</h1>
 <a id="17.1"></a><div class="lyblob">
@@ -5665,7 +5676,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子谓<a href="#li">伯鱼</a>曰：“女为《周南》、《召南》矣乎？人而不为《周南》、《召南》，其犹正墙面而立也与！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm"><a href="#wei2b">为</a></span>（<span class="lypinyin">wéi</span>）：指学。<span class="lyseealso"><span>【参】</span><span><a href="#16.13" class="lyref">16.13</a> <span class="lyq">学《诗》乎？……不学《诗》，无以言。</span></span></span></p></li>
-<li><p><a id="zhounan"></a><span class="lyterm">《周南》</span>、<span class="lyterm">《召（<span class="lypinyin">shào</span>）南》</span>是《诗经》开头的两章，共25首。在《国风》里，只有这两章不对应于特定的国家，而是<a href="#zhougong">周</a>、<a href="#shaogong">召</a>二公分陕而治的南国地区。<span class="lyseealso"><span>【参】</span><span>唐初陆德明《经典释文·毛诗音义》：<span class="lyq">南者，言周之德化自<a href="#taibo">岐</a>阳而先<a href="#pi1">被</a>南方。</span>（阳：山的南面。）<a href="#jizhaguanyue">季札</a>在鲁国观周乐时，对《周南》、《召南》的评价是：<span class="lyq">美哉！始基之矣，犹未也。然勤而不怨矣。</span>（基：有基础。未：未完善。）刘宝楠《论语正义》认为：<span class="lyq">二《南》皆言夫妇之道，为<a href="#wangdao">王化</a>之始。故君子反身必先修诸己，而后可“刑于寡妻，至于兄弟，以御于家邦”。</span>（所引句出自《诗经·大雅·思齐》，原诗是赞颂<a href="#wen">文王</a>之德。刑：通“型”，示范。寡：王侯的谦称，此指文王。）</span></span></p></li>
+<li><p><a id="zhounan"></a><span class="lyterm">《周南》</span>、<span class="lyterm">《召（<span class="lypinyin">shào</span>）南》</span>是《诗经》开头的两章，共25首。在《国风》里，只有这两章不对应于特定的国家，而是<a href="#zhougong">周</a>、<a href="#shaogong">召</a>二公分陕而治的南国地区。<span class="lyseealso"><span>【参】</span><span>唐初陆德明《经典释文·毛诗音义》：<span class="lyq">南者，言周之德化自<a href="#taibo">岐</a>阳而先<a href="#pi1">被</a>南方。</span>（阳：山的南面。）<a href="#jizhaguanyue">季札</a>在鲁国观周乐时，对《周南》、《召南》的评价是：<span class="lyq">美哉！始基之矣，犹未也。然勤而不怨矣。</span>（基：有基础。未：未完善。）刘宝楠《论语正义》认为：<span class="lyq">二《南》皆言夫妇之道，为<a href="#wangdao">王化</a>之始。故君子反身必先修诸己，而后可“刑于寡妻，至于兄弟，以御于家邦”。</span>（所引句出自《诗经·大雅·思齐》，原诗是赞颂<a href="#wen">文王</a>之德。刑：通“型”，示范。<a href="#gua3">寡</a>：此指文王。）</span></span></p></li>
 <li><p><span class="lyterm">正墙面而立</span>：面对着墙壁贴近站着。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">即其至近之地，而一物无所见，一步不可行。</span>这个比喻可能是周朝的习惯说法，如《尚书·周书·周官》（伪）中，<a href="#chengwang">周成王</a>告诫百官：<span class="lyq">不学墙面，<a href="#li4">莅</a>事惟烦。</span>西汉孔安国注：<span class="lyq">人而不学，其犹正墙面而立，临政事必烦。</span>《宋史·王显传》载，宋太祖曾对时任枢密使的王显说：<span class="lyq">卿世家本儒，少遭乱失学，今<a href="#dian3">典</a>朕机务，无暇博览群书，能熟读《军戒》三篇，亦可免于面墙矣。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -6202,7 +6213,7 @@ img.characterimg {
 <p>《论语》中，仅有本章至 <a href="#19.25" class="lyref">19.25</a>  的4章称呼孔子的字<span class="lyterm">仲尼</span>，从交谈内容和 <a href="#19.25" class="lyref">19.25</a> <span class="lyq">其生也荣，其死也哀</span>的评价看，这些对话可能发生在孔子去世之后。</p>
 </li>
 <li><p><span class="lyterm">文武之道</span>：指周文王、周武王的治国之道及其礼乐典章。<span class="lyexample"><span>【例】</span><span>成语“文武之道，一张一弛”的来历，参见 <a href="#10.13" class="lyref">10.13</a> <a href="#zhaji">所引</a>《礼记》。</span></span></p></li>
-<li><p><span class="lyterm">未坠于地，在人</span>：指（虽然年代遥远，但）尚未磨灭，仍由人传承，体现在社会生活中。<span class="lyterm">坠</span>：落下，引申有丧失、损毁的意思。<span class="lyexample"><span>【例】</span><span>《史记·封禅书》索隐述赞：<span class="lyq">汉承遗绪，<a href="#sidao">斯道</a>不坠。</span>（<a id="xu4b"></a>绪：前人未完成的功业。）</span></span><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq"><a href="#aigong">哀公</a>问政。子曰：“文武之政，布在方策。其人存，则其政举；其人亡，则其政息。……故为政在人，取人以身，修身以道，修道以仁。”</span>（方策：政策礼教的典籍。其人：指传承文武之道者。孔子这句话，本意是强调贤人为政的重要，可后来“人存政举、人亡政息”多指政策缺乏前瞻性、持续性，人走茶凉。）元代胡三省的《资治通鉴》注序中，认为<a href="#liujing">六经</a>之外，历史也有“载道”的作用：<span class="lyq">夫道无不在，散于事为之间。因事之得失成败，可以知道之万世亡弊，史可少欤！</span></span></span></p></li>
+<li><p><span class="lyterm">未坠于地，在人</span>：指（虽然年代遥远，但）尚未磨灭，仍由人传承，体现在社会生活中。<span class="lyterm">坠</span>：落下，引申有丧失、损毁的意思。<span class="lyexample"><span>【例】</span><span>《史记·封禅书》索隐述赞：<span class="lyq">汉承遗绪，<a href="#sidao">斯道</a>不坠。</span>（<a id="xu4b"></a>绪：前人未完成的功业。）</span></span><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq"><a href="#aigong">哀公</a>问政。子曰：“文武之政，布在方策。其人存，则其政举；其人亡，则其政息。……故为政在人，取人以身，修身以道，修道以仁。”</span>（方策：政策礼教的典籍。其人：指传承文武之道者。孔子这句话，本意是强调贤人为政的重要，可后来“人存政举、人亡政息”多指政策缺乏持续性、前瞻性，人走茶凉。）元代胡三省的《资治通鉴》注序中，认为<a href="#liujing">六经</a>之外，历史也有“载道”的作用：<span class="lyq">夫道无不在，散于事为之间。因事之得失成败，可以知道之万世亡弊，史可少欤！</span></span></span></p></li>
 <li><p><span class="lyterm">常师</span>：固定的老师。<span class="lyseealso"><span>【参】</span><span><a href="#7.22" class="lyref">7.22</a> 。韩愈《师说》：<span class="lyq">圣人无常师。孔子师郯子、苌弘、<a href="#shixiang">师襄</a>、老聃。郯子之徒，其贤不及孔子。</span>（郯子：<a href="#tianzishiguan">郯国</a>国君，孔子曾向他请教官名。苌（<span class="lypinyin">cháng</span>）弘：春秋时贤大夫，孔子曾向他问乐。老聃（<span class="lypinyin">dān</span>）：即老子，孔子曾向他问礼。）</span></span></p></li>
 </ul></div>
 </div>
@@ -6314,7 +6325,7 @@ img.characterimg {
 <li><p><span class="lyterm"><a href="#hui4">惠</a>而不费</span>：使民众得到切实利益，而又不折腾浪费。<span class="lyseealso"><span>【参】</span><span>《论语注疏》：<span class="lyq">民居五土，所利不同。……人君因其所利，使各居其所安，不易其利，则是惠爱利民在政，且不费于财也。</span>注疏所解近似道家的<a href="#wuweierzhi">无为而治</a>，也许孔子的本意中，从政者会更<a href="#hezuyizang">积极明智</a>，富有远见。思考：查一下近年的新闻，有多少“倾举国之力”的建议？哪些是合理的？关于“一己之力”的报道呢？它们反映了怎样的心态？</span></span></p></li>
 <li><p><span class="lyterm">劳而不怨</span>里，<span class="lyterm">劳</span>和<span class="lyterm">怨</span>都是使动用法的动词，对象是民。<span class="lyseealso"><span>【参】</span><span><a href="#5.16" class="lyref">5.16</a> <a href="#14.13" class="lyref">14.13</a> </span></span></p></li>
 <li><p><a id="wuzhonggua"></a><span class="lyterm"><a href="#wu2a">无</a>众寡，无小大，<a href="#wu2">无</a>敢慢</span>：不管人多人少，无论事大事小，都没有敢怠慢的。<span class="lyseealso"><span>【参】</span><span><a href="#12.2" class="lyref">12.2</a> <a href="#13.1" class="lyref">13.1</a> 。《礼记·表记》：<span class="lyq">子曰：“君子庄敬日强，安<a href="#si4b">肆</a>日<a href="#tou1">偷</a>。君子不以一日使其躬儳焉，如不终日。”</span>（儳（<span class="lypinyin">chàn</span>）：苟且可鄙的样子。）</span></span></p></li>
-<li><p><span class="lyterm">不教而杀</span>：不施行教化，而（一出现问题就）滥用杀戮。</p></li>
+<li><p><span class="lyterm">不教而杀</span>：不施行教化，而（一出现问题就）滥用杀戮。<span class="lyseealso"><span>【参】</span><span><a href="#13.11" class="lyref">13.11</a> <span class="lyq">善人为邦百年，亦可以胜残去杀矣。</span></span></span></p></li>
 <li><p><span class="lyterm">不戒视成</span>：不先设定好要求，却要看到满意的成果。<span class="lyterm">戒</span>：预先告诉，叮嘱。<span class="lyexample"><span>【例】</span><span>《汉书·高帝纪上》：<span class="lyq">项伯许诺，即夜复去，戒沛公曰：“旦日不可不早自来谢！”</span></span></span></p></li>
 <li><p><span class="lyterm">慢令致期</span>：指令下得迟缓拖沓，却要限期完工。<a id="zhi4a"></a><span class="lyterm">致</span>：极，尽。<span class="lyexample"><span>【例】</span><span>《国语·吴语》：<span class="lyq">饮食不致味，听乐不尽声。</span></span></span></p></li>
 <li><p><span class="lyterm"><a href="#you2">犹</a>之与人也，出纳之吝，谓之有司</span>：同样是把东西给人家，拿出手时万难割舍，就叫抠门没出息。<span class="lyterm">出纳</span>：财物的支出和收入，这里偏指支出。<span class="lyterm">有司</span>是专管某事的<a href="#yousi">小官</a>，这里比喻小家子气，好像动一动都关乎他身家性命似的，近似于批评<a href="#fanxu">樊迟</a>的“<a href="#xiaoren1">小人</a>”。<span class="lyexample"><span>【例】</span><span>《吕氏春秋·慎大览·察今》：<span class="lyq">夫不敢议法者，众庶也；以死守法者，有司也；因时变法者，贤主也。</span><a id="mokehuixi"></a>北宋彭乘《墨客挥犀·卷七》记述当时的官场，天文院与司天监本应相互监督，<span class="lyq">以两司奏状对勘，以防虚伪。近岁皆是阴相计会，符同写奏，习以为常，其来已久，中外具知之，不以为怪。其日月五星行次，皆只据小历所算躔度誊奏，不曾占候，有司但<a href="#beiyuan">备员</a>安禄而已。</span>（计会（<span class="lypinyin">kuài</span>）：盘算，商量。中外：指朝廷内外。小历：即《符天历》，唐末开始流行的一种民间历法。躔（<span class="lypinyin">chán</span>）度：日月星辰在天空中的运行角度，一周天分为360度。）</span></span><span class="lyseealso"><span>【参】</span><span>孔子对“与人”的态度，可见 <a href="#11.17" class="lyref">11.17</a> <a href="#julianerfuyi">引文</a>。</span></span></p></li>
@@ -6578,7 +6589,7 @@ img.characterimg {
 <p><span class="lybook">《论语本解》</span>，孙钦善著，三联书店，2009年。注释精准，各章之间经常提供交叉引用，5个附论也各有价值。2013年出修订版。</p>
 <p><span class="lybook">《论语今注今译》</span>，毛子水注译，重庆出版社，2009年。原属台湾商务印书馆“古籍今注今译丛书”的一种，1975年出版，1984年作者校订再版，在海外具有广泛持久的影响。它的大部分注释选自合适的古注，辅以按语，另有不少生动活泼的议论，遇到难理解或争议大的就直接写明，读起来既顺畅又踏实。该丛书由上海商务印书馆前总经理（1930—1945）、台湾商务印书馆前董事长（1964—1979）王云五先生主编，共出版约60种。</p>
 <p><span class="lybook">《论语通译》</span>（修订版），徐志刚译注，人民文学出版社，语文新课标必读丛书，2006年。发行量较大，简明清通，但似乎过于简化，疏漏略多。</p>
-<p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔魏〕何晏等集解，〔梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。儒家“十三经注疏”之一，汉唐经学的总结，朱熹《四书集注》之前的通行注本。书前“提要”介绍：<span class="lyq">三国时，魏何晏等五人集孔安国、包咸、周氏、马融、郑玄、陈群、王肃和周生烈等对《论语》的解说，择善而从，成《论语集解》。梁皇侃对《集解》进行疏解，成《论语义疏》。宋咸平二年（公元999年），邢昺遵诏改定皇侃《义疏》，其删繁就简，增加对义理的阐述，终成《论语正义》二十卷，又名《论语注疏》。</span>因清儒刘宝楠也有《论语正义》，为清代经学的结晶，故本书多称《论语集解》或《论语注疏》。</p>
+<p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔魏〕何晏等集解，〔梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。儒家“十三经注疏”之一，汉唐经学的总结，朱熹《四书集注》之前的通行注本。书前“提要”介绍：<span class="lyq">三国时，魏何晏等五人集孔安国、包咸、周氏、马融、郑玄、陈群、王肃和周生烈等对《论语》的解说，择善而从，成《论语集解》。梁皇侃对《集解》进行疏解，成《论语义疏》。宋咸平二年（公元999年），邢昺遵诏改定皇侃《义疏》，其删繁就简，增加对义理的阐述，终成《论语正义》二十卷，又名《论语注疏》。</span>因清儒刘宝楠也有《论语正义》，为清代经学之结晶，故本书多称《论语集解》或《论语注疏》。</p>
 <p><span class="lybook">《四书集注》</span>，〔南宋〕朱熹集注，陈戍国标点，岳麓书社，2004年。</p>
 <p><a id="lunyujishi"></a><span class="lybook">《论语集释》</span>，程树德撰，中华书局，中华国学文库，2013年。本书可称《论语》注解大全，分类集成了从汉至清各家学者的研究心得，引书680种，并加按语，方便后人系统了解各种诠释与引申，至可感佩。或有讥为取舍不尽精当，敢问更精者何在？其《自序》称：<span class="lyq">夫文化者国家之生命，思想者人民之倾向，教育者立国之根本，凡爱其国者，未有不爱其国之文化。</span>可与钱穆先生《国史大纲》的开篇“凡读本书请先具下列诸信念”对读。</p>
 <p><span class="lybook">《唐写本论语郑氏注及其研究》</span>，王素编著，文物出版社，1991年。</p>
