--- a/aboly.html
+++ b/aboly.html
@@ -5916,11 +5916,11 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“年四十而见恶焉，其终也已。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">见<a href="#wu4">恶</a></span>：被别人讨厌，不招人待见。</p></li>
-<li><p><a id="zhong1a"></a><span class="lyterm">终</span>：尽，完，指人没前途没指望了，完蛋了，hopeless，impossible。英语的dead end指事时，也有这个意思。<span class="lyexample"><span>【例】</span><span>a dead-end job。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#9.23" class="lyref">9.23</a> </span></span></p></li>
+<li><p><a id="zhong1a"></a><span class="lyterm">终</span>：尽，完，指人没前途没指望了，完蛋了，hopeless，impossible。英语的dead end指事时，也有这个意思。<span class="lyexample"><span>【例】</span><span>a dead-end job。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#9.23" class="lyref">9.23</a> <span class="lyq">四十、五十而无闻焉，斯亦不足畏也已。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="18"></a><h1 class="lybodychapter">18. 微子</h1>
-<p>本篇讲政事与隐士。时间上看，有商末周初的，有孔子同时代的，也有早于孔子百余年以及无法确考的。</p>
+<p>本篇讲政事与隐士。时间上看，有商末周初的，有孔子同时代的，也有早于孔子百余年和无法确考的。</p>
 <a id="18.1"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#18.1">18.1</a></div>
 <div class="lybloboriginaltext"><p>微子去之，箕子为之奴，比干谏而死。孔子曰：“殷有三仁焉。”</p></div>
