--- a/aboly.html
+++ b/aboly.html
@@ -569,7 +569,7 @@ img.characterimg {
 <p>这句话讲全了是：人不知我，而我不愠。文言文中，尤其是较古的篇章，常会省略、变换主语或宾语，需要读者根据上下文自行补全。适应性练习：<a href="#2.9" class="lyref">2.9</a> <a href="#6.5" class="lyref">6.5</a> <a href="#10.3" class="lyref">10.3</a> <a href="#13.1" class="lyref">13.1</a> </p>
 </li>
 <li>
-<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚才能卓越之人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以参考<a href="#ren2">仁</a>的解释。<span class="lyseealso"><span>【参】</span><span><a href="#15.18" class="lyref">15.18</a> 。《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
+<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚才能卓越的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以参考后面<a href="#ren2">仁</a>的解释。<span class="lyseealso"><span>【参】</span><span><a href="#15.18" class="lyref">15.18</a> 。《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
 <p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的实际情况。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span></p>
 <p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并列，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
@@ -584,7 +584,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#youruo">有子</a>曰：“其为人也孝弟，而好犯上者，鲜矣；不好犯上，而好作乱者，未之有也。君子务本，本立而道生。孝弟也者，其为仁之本与！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">其为人也孝弟（<span class="lypinyin">tì</span>），而好（<span class="lypinyin">hào</span>）犯上者</span>。<span class="lyterm">其</span>：代词，他，他的，这里用作泛指。<span class="lyterm">其……者</span>的句式，相当于英语He who/whose...做主语的用法。<span class="lyexample"><span>【例】</span><span><span class="lyqe">He who knows, does not speak.</span>（<span class="lyq">知者不言。</span>见《老子》第56章。）</span></span></p>
+<p><span class="lyterm">其为人也孝弟（<span class="lypinyin">tì</span>），而好（<span class="lypinyin">hào</span>）犯上者</span>。<span class="lyterm">其</span>：代词，他，他的，这里用作泛指。<span class="lyterm">其……者</span>的句式，相当于英语He who/whose...做主语的用法。<span class="lyexample"><span>【例】</span><span><span class="lyqe">He who knows, does not speak.</span>（<span class="lyq">知者不言。</span>出自《老子》第56章。）</span></span></p>
 <p><span class="lyterm">也</span>：语气词，用作句中停顿，相当于轻读的啊、呀、哦。</p>
 <p><a id="xiao4"></a><span class="lyterm">孝</span>：子女敬爱、尽心尽力侍奉父母，其甲骨文字形像年少者搀扶老人行走。<span class="lyseealso"><span>【参】</span><span>西汉贾谊《新书·道术》：<span class="lyq">子爱利亲谓之孝，反孝为孽。</span>（爱利：爱之利之。）对应地，父母关爱子女称为<span class="lykeyword"><a href="#ci2">慈</a></span>。《<a href="#xiaojing">孝经</a>·开宗明义》：<span class="lyq">夫孝，<a href="#de2">德</a>之本也，教之所由生也。</span>《汉书·宣帝纪》载，地节四年（前66年）宣帝诏书开头就说：<span class="lyq">导民以孝，则天下顺。</span></span></span></p>
 <p><a id="ti4"></a><span class="lyterm">弟</span>：通“悌”（<span class="lypinyin">tì</span>），弟弟敬爱哥哥。对应地，哥哥爱护弟弟称为<span class="lykeyword">友</span>。<span class="lyexample"><span>【例】</span><span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">孝乎惟孝，友于兄弟，施于有政。</span></span></span><span class="lyseealso"><span>【参】</span><span>清代李塨（<span class="lypinyin">gōng</span>）《大学传注》：<span class="lyq">家之所以孝亲、弟兄、慈幼，即国之所以事君事长。</span></span></span></p>
@@ -1181,7 +1181,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#2.24">2.24</a></div>
 <div class="lybloboriginaltext"><p>子曰：“非其鬼而祭之，谄也；见义不为，无勇也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">非<a href="#qi2">其</a>鬼</span>：不是自己家去世的亲人。<a id="guishen"></a>古代认为，人死以后，灵魂化为<span class="lyterm">鬼</span>，<span class="lykeyword">神</span>则源于对自然力量的崇拜，祭祀鬼神可以祈福。</p></li>
+<li><p><span class="lyterm">非<a href="#qi2">其</a>鬼</span>：不是自己家去世的亲人。<a id="guishen"></a><span class="lykeyword">神</span>源于对自然力量的崇拜，而古代认为，人死以后，灵魂化为<span class="lyterm">鬼</span>，祭祀鬼神可以祈福。</p></li>
 <li><p><span class="lyterm">见<a href="#yi4">义</a>不为，无勇也。</span>后来有成语“见义勇为”，形容英勇正义的行为，也用来鼓励人勇敢去做正确的事。<span class="lyseealso"><span>【参】</span><span><a id="sierbuyi"></a>《左传·文公二年》：<span class="lyq">死而不<a href="#yi4">义</a>，非勇也。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -2385,7 +2385,7 @@ img.characterimg {
 <p><a id="qiran"></a><span class="lyterm">其然</span>：如此，（是）这样。<span class="lyterm">然</span>：代词，这样，指“从之”。<span class="lyterm"><a href="#qi2a">其</a></span>的语气增加了判断的意味。<span class="lyexample"><span>【例】</span><span><a href="#8.20" class="lyref">8.20</a> <span class="lyq">才难。不其然乎？</span><a href="#14.13" class="lyref">14.13</a> <span class="lyq">其然，岂其然乎？</span></span></span></p>
 </li>
 <li><p><span class="lyterm">逝</span>：往，去，这是其本义，作为使动用法，让他去（井边）。<span class="lyterm">陷</span>：坠入，也是使动用法，即骗下井去。</p></li>
-<li><p><span class="lyterm">欺</span>：欺骗。<a id="wang3a"></a><span class="lyterm"><a href="#wang3">罔</a></span>：使动用法，使迷惑，蒙蔽，指动摇其大节。<span class="lyseealso"><span>【参】</span><span><a href="#14.31" class="lyref">14.31</a> <span class="lyq">不逆诈，不亿不信。</span><a href="#8.6" class="lyref">8.6</a> <span class="lyq">临大节而不可夺也。</span>《孟子·万章上》讲了一个<a href="#zichan">子产</a>受骗的故事：子产的属下把别人送给子产的鲜鱼煮熟吃掉，却报告说已经放生到池塘里，看见它很欢畅地游走了，子产听后为鱼<span class="lyq">得其所哉</span>而欣喜。孟子的结论是：<span class="lyq">君子可欺以其方，难罔以非其道。</span>（方：方正，正派，也可理解为（合乎情理的）<a href="#fang1">方式</a>。）</span></span></p></li>
+<li><p><span class="lyterm">欺</span>：欺骗。<a id="wang3a"></a><span class="lyterm"><a href="#wang3">罔</a></span>：使动用法，使迷惑，蒙蔽，指动摇其大节。<span class="lyseealso"><span>【参】</span><span><a href="#14.31" class="lyref">14.31</a> <span class="lyq">不逆诈，不亿不信。</span><a href="#8.6" class="lyref">8.6</a> <span class="lyq">临大节而不可夺也。</span>《孟子·万章上》讲了一个<a href="#zichan">子产</a>受骗的故事：子产的属下把别人送给子产的鲜鱼煮熟吃掉，却报告说已经放生到池塘里，看见它很欢畅地游走了，子产听后为鱼<span class="lyq"><a href="#gedeqisuo">得其所</a>哉</span>而欣喜。孟子的结论是：<span class="lyq">君子可欺以其方，难罔以非其道。</span>（方：方正，正派，也可理解为（合乎情理的）<a href="#fang1">方式</a>。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="6.27"></a><div class="lyblob">
@@ -3052,7 +3052,7 @@ img.characterimg {
 <li><p><span class="lyterm">菲</span>（<span class="lypinyin">fěi</span>）：微薄。<span class="lyexample"><span>【例】</span><span>成语“妄自菲薄”。</span></span><span class="lyterm">菲饮食而<a href="#zhi4">致</a>孝乎<a href="#guishen">鬼神</a></span>：指禹放低自己的饮食标准，而尽心尽力献祭于鬼神（为民祈福）。</p></li>
 <li><p><span class="lyterm">衣服</span>：指日常穿着。<span class="lyterm">黻（<span class="lypinyin">fú</span>）</span>：大夫及以上祭祀时所穿的礼服。<a id="mian3"></a><span class="lyterm">冕</span>：大夫及以上所戴的礼帽。<span class="lyterm">致美乎黻冕</span>也是为了祭祀时取悦鬼神，而非满足私欲。</p></li>
 <li><p><a id="bei1"></a><span class="lyterm">卑</span>：低矮，低下，用作动词，建造得矮。<span class="lyexample"><span>【例】</span><span>成语“不卑不亢”。</span></span></p></li>
-<li><p><span class="lyterm">宫室</span>：房屋的通称，又专指帝王的宫殿。<span class="lyexample"><span>【例】</span><span>《史记·项羽本纪》：<span class="lyq">烧秦宫室，火三月不灭。</span></span></span></p></li>
+<li><p><span class="lyterm"><a href="#gong1c">宫</a>室</span>：房屋的通称，又专指帝王的宫殿。<span class="lyexample"><span>【例】</span><span>《史记·项羽本纪》：<span class="lyq">烧秦宫室，火三月不灭。</span></span></span></p></li>
 <li><p><a id="dayuzhishui"></a><span class="lyterm">沟洫</span>（<span class="lypinyin">xù</span>）：田间水道。<span class="lyterm">尽力乎沟洫</span>指大禹治水为民造福。相传<a href="#yao">尧帝</a>时洪水滔天，人民不胜其苦。先用鲧（<span class="lypinyin">gǔn</span>）治水不成，<a href="#shun">舜</a>又举荐鲧之子禹。禹<span class="lyq">劳身焦思，在外十三年，过家门不敢入</span>，开山导水，分州筑湖，推广水稻，终成大功。事见《史记·夏本纪》。</p></li>
 </ul></div>
 </div>
@@ -3225,7 +3225,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“吾自卫反鲁，然后乐正，《雅》、《颂》各得其所。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">乐正</span>：指孔子对《<a href="#shijing">诗经</a>》的《雅》、《颂》部分进行了编辑修订，使音律中正，诗、乐相合。此外，孔子可能还对《诗经》的文字进行过润色，详情已难确考。</p></li>
-<li><p><span class="lyterm">各得其所</span>：各自得到其应有的位置。除了这个意思，成语“各得其所”也可以指各人都得到了自己想要的东西。</p></li>
+<li><p><a id="gedeqisuo"></a><span class="lyterm">各得其所</span>：各自得到其应有的位置（妥当的安排）。除了这个意思，成语“各得其所”也可以指各人都得到了自己想要的东西。</p></li>
 </ul></div>
 </div>
 <a id="9.16"></a><div class="lyblob">
@@ -6269,10 +6269,13 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#19.23">19.23</a></div>
 <div class="lybloboriginaltext"><p><a href="#shusunwushu">叔孙武叔</a>语大夫于朝曰：“<a href="#zigong">子贡</a>贤于仲尼。”<a href="#zifujingbo">子服景伯</a>以告子贡。子贡曰：“譬之宫墙，<a href="#zigong">赐</a>之墙也及肩，窥见室家之好；夫子之墙数仞，不得其门而入，不见宗庙之美、百官之富。得其门者或寡矣，夫子之云，不亦宜乎！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">宫墙</span>：住宅的围墙。<span class="lyterm">宫</span>：有墙围绕的房屋，这是其本义。</p></li>
+<li>
+<p><span class="lyterm">宫墙</span>：住宅的围墙。<a id="gong1c"></a><span class="lyterm">宫</span>：有墙围绕的房屋，这是其本义。</p>
+<p>子贡有此一比，也许是他和子服景伯正在鲁宫附近，就顺手一指。</p>
+</li>
 <li><p><span class="lyterm">室家</span>：房舍，这属于普通人家的资产。</p></li>
 <li><p><a id="ren4"></a><span class="lyterm">仞</span>（<span class="lypinyin">rèn</span>）：长度单位，标准是成年人的臂展，合周制8 <a href="#chi3">尺</a> ≈ 汉制7尺 ≈ 1.6米。</p></li>
-<li><p><span class="lyterm"><a href="#zongmiao">宗庙</a>之美，百官之富</span>：宗庙的壮美，各种馆舍的齐备，这属于王侯之家的气象。<a id="guan1"></a><span class="lyterm">官</span>：官舍，官吏办公处，这是其本义。</p></li>
+<li><p><span class="lyterm"><a href="#zongmiao">宗庙</a>之美，百官之富</span>：宗庙的壮美，各种馆舍的齐备，这是王侯之家的气象。<a id="guan1"></a><span class="lyterm">官</span>：官舍，官吏办公处，这是其本义。</p></li>
 <li><p><span class="lyterm">夫子之云</span>里的<span class="lyterm">夫子</span>，指叔孙武叔。<span class="lyterm"><a href="#yun2">云</a></span>用作名词，说的话，意思是“会这样说”，近似于 <a href="#12.8" class="lyref">12.8</a> <span class="lyq">夫子之说君子也。</span></p></li>
 <li><p><span class="lyterm">宜</span>：合适，引申为当然，难怪，容易理解。<span class="lyexample"><span>【例】</span><span>北宋苏舜钦《答马永书》：<span class="lyq">苟去其位，则道日益舒，宜其安而无闷也。</span></span></span></p></li>
 </ul></div>
@@ -6449,7 +6452,7 @@ img.characterimg {
 <p><a id="mengshi"></a><span class="lycharname">孟氏</span>，<span class="lycharname">孟</span>：即孟孙氏，鲁国<a href="#sanhuan">三桓</a>之一，是鲁桓公庶长子庆父的后代，已知的最后一代宗主是第11代的<a href="#mengjingzi">孟敬子</a>。据说孟子也是庆父的后代，但和孟孙氏不同<a href="#zongzhu">族</a>。 <a href="#18.3" class="lyref">18.3</a> <a href="#19.19" class="lyref">19.19</a> </p>
 <p><a id="mengwubo"></a><span class="lycharname">孟武伯</span>：名彘（<span class="lypinyin">zhì</span>），谥号是武，<a href="#mengyizi">孟懿子</a>长子，<a href="#mengshi">孟孙氏</a>第10代宗主。<a href="#aigong">鲁哀公</a>在位的最后一年（前468年），出游时遇见孟武伯，哀公<span class="lyq">曰：“请有问于子：余及死乎？”对曰：“臣无由知之。”三问，卒辞不对。</span>（及死：善终，寿终。）哀公被迫要对<a href="#sanhuan">三桓</a>动手了。事见《左传·哀公二十七年》。 <a href="#2.6" class="lyref">2.6</a> <a href="#5.8" class="lyref">5.8</a> </p>
 <p><a id="qihuangong"></a><span class="lycharname">齐桓公</span>，<span class="lycharname">桓公</span>（？—前643年）：名小白，齐僖公三子，齐国第15任国君，春秋五<a href="#badao">霸</a>之首（“辟土服远曰桓”）。他在位43年，信任<a href="#guanzhong">管仲</a>主政，力行改革，国力大盛，尊王攘<a href="#yidihuaxia">夷</a>，<a href="#jiuhezhuhou">九合诸侯</a>，成为“霸主”的典范。事见《史记·齐太公世家》。 <a href="#14.15" class="lyref">14.15</a> <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a> </p>
-<p><a id="qijinggong"></a><span class="lycharname">齐景公</span>（前547年—前490年在位）：名杵臼，齐国第23任国君，<a href="#cuizhu">齐庄公</a>的异母弟，在位之久为齐国之最。他<span class="lyq">好治宫室，聚狗马，奢侈，厚赋重刑</span>，幸好内有贤相<a href="#yanpingzhong">晏婴</a>，外有良将司马穰苴（<span class="lypinyin">ráng jū</span>），任内局势基本稳定。但早在景公九年，晏婴就察觉到衰败的端倪，认为<span class="lyq">齐政卒归<a href="#chenchengzi">田氏</a>：田氏虽无大德，以公权私，有德于民，民爱之。</span>事见《史记·齐太公世家》。《晏子春秋》记载了大量“景公如何如何，晏子谏/讽/对”的故事。 <a href="#12.11" class="lyref">12.11</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.3" class="lyref">18.3</a> </p>
+<p><a id="qijinggong"></a><span class="lycharname">齐景公</span>（前547年—前490年在位）：名杵臼，齐国第23任国君，<a href="#cuizhu">齐庄公</a>的异母弟，在位之久为齐国之最。他<span class="lyq">好治宫室、聚狗马，奢侈，厚赋重刑</span>，幸好内有贤相<a href="#yanpingzhong">晏婴</a>，外有良将司马穰苴（<span class="lypinyin">ráng jū</span>），任内局势基本稳定。但早在景公九年，晏婴就察觉到衰败的端倪，认为<span class="lyq">齐政卒归<a href="#chenchengzi">田氏</a>：田氏虽无大德，以公权私，有德于民，民爱之。</span>事见《史记·齐太公世家》。《晏子春秋》记载了大量“景公如何如何，晏子谏/讽/对”的故事。 <a href="#12.11" class="lyref">12.11</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.3" class="lyref">18.3</a> </p>
 <p><a id="quboyu"></a><span class="lycharname">蘧（<span class="lypinyin">qú</span>）伯玉</span>：蘧瑗（<span class="lypinyin">yuàn</span>），字伯玉，卫国贤大夫，谥号是成（“安民立政曰成”）。他应比孔子年长10岁以上，孔子在卫国时，曾借住在他家。西汉刘安《淮南子·原道训》说：<span class="lyq">蘧伯玉年五十而有四十九年非。何者？先者难为知，而后者易为攻也。</span>（攻：指借鉴经验以克服困难，相当于现代说的后发优势。）可见他是个不断追求进步的人。据《孔子家语·弟子行》，孔子评价他<span class="lyq">外宽而内正，自极于隐括之中，直己而不直人，汲汲于仁，以善自终。</span>（隐括：矫正曲斜的工具，隐是矫曲为直，括是矫斜为方，引申为标准规范，构词与<a href="#leixie">缧绁</a>相同。汲汲：急切追求的样子。） <a href="#14.25" class="lyref">14.25</a> <a href="#15.7" class="lyref">15.7</a> </p>
 <p><a id="shusunwushu"></a><span class="lycharname">叔孙武叔</span>：鲁国<a href="#sanhuan">三桓</a>之一叔孙氏的第8代宗主，名州仇，谥号是武，曾任鲁国<a href="#huantui">司马</a>。叔孙氏的封邑是郈（<span class="lypinyin">hòu</span>）邑，在今山东省泰安市东平县，位于<a href="#wenshui">汶水</a>北岸，齐鲁交界处。 <a href="#19.23" class="lyref">19.23</a> <a href="#19.24" class="lyref">19.24</a> </p>
 <p><a id="shun"></a><span class="lycharname">舜</span>（约前2200年前后）：有虞氏，名重华，又称虞舜，上古传说中<a href="#wudi">五帝</a>的第5位，是五帝第2位颛顼的6世孙。他20岁即以孝谨闻名（成为《二十四孝》第1个故事“孝感动天”的主角），30岁被举荐给<a href="#yao">尧帝</a>。尧帝把两个女儿娥皇、女英嫁给他，让9个儿子同他共事。经过长期的考察锻炼，舜在50岁时摄天子政，61岁登帝位，22年后退居二线，授权给治水有功的<a href="#yu">禹</a>，又17年后去世。舜帝<a href="#wuweierzhi">举贤任能</a>，布教四方，厚德远佞，建立了井井有条的清平世界。 <a href="#6.30" class="lyref">6.30</a> <a href="#8.18" class="lyref">8.18</a> <a href="#8.20" class="lyref">8.20</a> <a href="#12.22" class="lyref">12.22</a> <a href="#14.42" class="lyref">14.42</a> <a href="#15.5" class="lyref">15.5</a> <a href="#20.1" class="lyref">20.1</a> </p>
